updating readme.md with fix for build error on mac